--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1 class="header__title">Etiam feugiat</h1>
         <nav>
            <ul class="header__list">
-               <li class="header__element">HOME</li>
-               <li class="header__element">PRODUCTS</li>
-               <li class="header__element">ABOUT US</li>
-               <li class="header__element">CONTACT</li>
+               <li class="header__element"> <a href="#" class="header__link">HOME</a></li>
+               <li class="header__element"><a href="#" class="header__link">PRODUCTS</a></li>
+               <li class="header__element"><a href="#" class="header__link">ABOUT <br> US</a></li>
+               <li class="header__element"><a href="#" class="header__link">CONCACT</a></li>
            </ul> 
         </nav>
     </header>
@@ -27,22 +27,23 @@
             <h6 class="article__subtitle">LOREM IPSUM DOLOR SIT AMET CONSECTETUR</h6>
             <hr class="article__line">
             <h4 class="article__title">Lorem, ipsum dolor</h4>
-            <p class="article__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tristique ante et nulla imperdiet, in imperdiet diam dapibus. Cras auctor leo eget arcu aliquam, non pellentesque mauris ullamcorper. Aenean pharetra nibh in est vehicula pellentesque. Fusce mollis porta sapien ut volutpat. Sed eget tincidunt dui. Curabitur vehicula est non enim pulvinar porta.</p>
+            <p class="article__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tristique ante et nulla imperdiet, in imperdiet diam dapibus. Cras auctor leo eget arcu aliquam, non pellentesque mauris ullamcorper. Aenean pharetra nibh in est vehicula pellentesque. </p>
             <button class="article__button"> READ MORE </button>
         </article>
         <article class="article">
             <img class="article__img" src="https://picsum.photos/id/231/600/400" alt="">
-            <h6 class="article__subtitle">LOREM IPSUM DOLOR SIT AMET CONSECTETUR<h6>
+            <h6 class="article__subtitle">NATUS QUIS SIT APERIAM MOLESTATE SAEPE<h6>
             <hr class="article__line">
             <h4 class="article__title">Doloribus, autem error</h4>
-            <p class="article__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tristique ante et nulla imperdiet, in imperdiet diam dapibus. Cras auctor leo eget arcu aliquam, non pellentesque mauris ullamcorper. Aenean pharetra nibh in est vehicula pellentesque. Fusce mollis porta sapien ut volutpat. Sed eget tincidunt dui. Curabitur vehicula est non enim pulvinar porta.</p>
+            <p class="article__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tristique ante et nulla imperdiet, in imperdiet diam dapibus. Cras auctor leo eget arcu aliquam, non pellentesque mauris ullamcorper. Aenean pharetra nibh in est vehicula pellentesque. </p>
             <button class="article__button"> READ MORE </button>
         </article>
     </main>
-    <footer>
+    <footer class="footer">
         <h5 class="footer__content">Lorem ipsum dolor sit, amet consectetur adipisicing</h5>
         <hr class="footer__line">
         <h3 class="footer__autor">&copy Mateusz Lamla ZSTI 2022 r.</h3>
+        
     </footer>
 </body>
 </html>
